--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:pre-commit": "CI=false react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext js,jsx",
-    "lint:fix": "eslint src --ext js,jsx --fix"
+    "lint:fix": "eslint src --ext js,jsx --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +65,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "husky": "^6.0.0"
   }
 }
